--- a/ui-main/ui-js/pom.xml
+++ b/ui-main/ui-js/pom.xml
@@ -35,62 +35,135 @@
         <name>Thalamas</name>
         <url>http://www.9toppiks.com</url>
     </organization>
-
-    <build>
-            <plugins>	            	
-	            <plugin>
-	                <groupId>org.apache.maven.plugins</groupId>
-	                <artifactId>maven-source-plugin</artifactId>
-	                <version>2.1.2</version>
-	                <executions>
-	                    <execution>
-	                        <id>attach-sources</id>
-	                        <goals>
-	                            <goal>jar</goal>
-	                        </goals>
-	                    </execution>
-	                </executions>
-	            </plugin>
-	            <plugin>
-                    <artifactId>maven-assembly-plugin</artifactId>
-                    <version>2.4.1</version>
-                    <configuration>
-                        <appendAssemblyId>false</appendAssemblyId>
-                        <descriptors>
-                            <descriptor>${basedir}/assembly.xml</descriptor>
-                        </descriptors>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>make-assembly</id>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>single</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <version>1.2</version>
-                    <executions>
-                        <execution>
-                            <id>Grunt Tasks</id>
-                            <phase>compile</phase>
-                            <configuration>
-                                <executable>java</executable>
-                                <arguments>
-                                    <argument>-version</argument>                                                                        
-                                </arguments>
-                            </configuration>
-                            <goals>
-                                <goal>exec</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>	
-	        </plugins>        
-    </build>
+    
+    <profiles>
+    	<profile>
+            <id>build-all</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>fullBuild</name>
+                </property>
+            </activation>
+            <build>
+               <plugins>	            	
+		            <plugin>
+		                <groupId>org.apache.maven.plugins</groupId>
+		                <artifactId>maven-source-plugin</artifactId>
+		                <version>2.1.2</version>
+		                <executions>
+		                    <execution>
+		                        <id>attach-sources</id>
+		                        <goals>
+		                            <goal>jar</goal>
+		                        </goals>
+		                    </execution>
+		                </executions>
+		            </plugin>
+		            <plugin>
+	                    <artifactId>maven-assembly-plugin</artifactId>
+	                    <version>2.4.1</version>
+	                    <configuration>
+	                        <appendAssemblyId>false</appendAssemblyId>
+	                        <descriptors>
+	                            <descriptor>${basedir}/assembly.xml</descriptor>
+	                        </descriptors>
+	                    </configuration>
+	                    <executions>
+	                        <execution>
+	                            <id>make-assembly</id>
+	                            <phase>package</phase>
+	                            <goals>
+	                                <goal>single</goal>
+	                            </goals>
+	                        </execution>
+	                    </executions>
+	                </plugin>
+	                <plugin>
+	                    <groupId>org.codehaus.mojo</groupId>
+	                    <artifactId>exec-maven-plugin</artifactId>
+	                    <version>1.2</version>
+	                    <executions>
+	                        <execution>
+	                            <id>Grunt Tasks</id>
+	                            <phase>compile</phase>
+	                            <configuration>
+	                                <executable>java</executable>
+	                                <arguments>
+	                                    <argument>-version</argument>                                                                        
+	                                </arguments>
+	                            </configuration>
+	                            <goals>
+	                                <goal>exec</goal>
+	                            </goals>
+	                        </execution>
+	                    </executions>
+	                </plugin>	
+	        	</plugins>  
+            </build>
+        </profile>
+        <profile>
+            <id>build-dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>                
+            </activation>
+            <build>
+               <plugins>	            	
+		            <plugin>
+		                <groupId>org.apache.maven.plugins</groupId>
+		                <artifactId>maven-source-plugin</artifactId>
+		                <version>2.1.2</version>
+		                <executions>
+		                    <execution>
+		                        <id>attach-sources</id>
+		                        <goals>
+		                            <goal>jar</goal>
+		                        </goals>
+		                    </execution>
+		                </executions>
+		            </plugin>
+		            <plugin>
+	                    <artifactId>maven-assembly-plugin</artifactId>
+	                    <version>2.4.1</version>
+	                    <configuration>
+	                        <appendAssemblyId>false</appendAssemblyId>
+	                        <descriptors>
+	                            <descriptor>${basedir}/assembly.xml</descriptor>
+	                        </descriptors>
+	                    </configuration>
+	                    <executions>
+	                        <execution>
+	                            <id>make-assembly</id>
+	                            <phase>package</phase>
+	                            <goals>
+	                                <goal>single</goal>
+	                            </goals>
+	                        </execution>
+	                    </executions>
+	                </plugin>
+	                <plugin>
+	                    <groupId>org.codehaus.mojo</groupId>
+	                    <artifactId>exec-maven-plugin</artifactId>
+	                    <version>1.2</version>
+	                    <executions>
+	                        <execution>
+	                            <id>Grunt Tasks</id>
+	                            <phase>compile</phase>
+	                            <configuration>
+	                                <executable>java</executable>
+	                                <arguments>
+	                                    <argument>-v</argument>                                                                        
+	                                </arguments>
+	                            </configuration>
+	                            <goals>
+	                                <goal>exec</goal>
+	                            </goals>
+	                        </execution>
+	                    </executions>
+	                </plugin>	
+	        	</plugins>  
+            </build>
+        </profile>
+    </profiles>
 
 </project>
