--- a/ui-main/ui-server/pom.xml
+++ b/ui-main/ui-server/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <appengine.app.version>1</appengine.app.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <webapp-dir>${basedir}/src/main/webapp</webapp-dir>
     </properties>
 
     <prerequisites>
@@ -93,7 +94,7 @@
 	                    <webResources>
 	                        <!-- in order to interpolate version from pom into appengine-web.xml -->
 	                        <resource>
-	                            <directory>${basedir}/src/main/webapp/WEB-INF</directory>
+	                            <directory>${webapp-dir}/WEB-INF</directory>
 	                            <filtering>true</filtering>
 	                            <targetPath>WEB-INF</targetPath>
 	                        </resource>
@@ -118,6 +119,52 @@
 	                </configuration>
 	            </plugin>
 	            
+	            <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>2.5</version>                                               
+                    <executions>
+                        <execution>
+                            <id>clean-ui-js-resources</id>
+                            <phase>clean</phase>
+                            <goals>
+                                <goal>clean</goal>
+                            </goals>
+                            <configuration>
+                                <filesets>
+                                    <fileset>
+                                        <directory>src/main/webapp</directory>
+                                        <includes>
+                                            <include>css/*</include>
+                                            <include>js/*</include>                                                
+                                        </includes>
+                                        <followSymlinks>false</followSymlinks>
+                                    </fileset>
+                                </filesets>
+                            </configuration>
+                        </execution> 
+                        <execution>
+                            <id>clean-ui-js-resources-on-build</id>
+                            <phase>initialize</phase>
+                            <goals>
+                                <goal>clean</goal>
+                            </goals>
+                            <configuration>
+                            	<excludeDefaultDirectories>true</excludeDefaultDirectories>
+                                <filesets>
+                                    <fileset>
+                                        <directory>src/main/webapp</directory>
+                                        <includes>
+                                            <include>css/*</include>
+                                            <include>js/*</include>                                                
+                                        </includes>
+                                        <followSymlinks>false</followSymlinks>
+                                    </fileset>
+                                </filesets>
+                            </configuration>
+                        </execution>                             
+                    </executions>
+                </plugin>
+	            
 	            <plugin>                
 	                <groupId>org.apache.maven.plugins</groupId>
 	                <artifactId>maven-dependency-plugin</artifactId>
@@ -136,7 +183,8 @@
 	                                    <version>${project.version}</version>
 	                                    <type>zip</type>
 	                                    <overWrite>true</overWrite>
-	                                    <outputDirectory>${basedir}/target/ui-server-${project.version}</outputDirectory>
+	                                    <!-- <outputDirectory>${basedir}/target/ui-server-${project.version}</outputDirectory> -->
+	                                    <outputDirectory>${webapp-dir}</outputDirectory>
 	                                </artifactItem>
 	                            </artifactItems>
 	                        </configuration>
