--- a/ui-main/ui-js/pom.xml
+++ b/ui-main/ui-js/pom.xml
@@ -35,135 +35,126 @@
         <name>Thalamas</name>
         <url>http://www.9toppiks.com</url>
     </organization>
-    
-    <profiles>
-    	<profile>
-            <id>build-all</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <property>
-                    <name>fullBuild</name>
-                </property>
-            </activation>
-            <build>
-               <plugins>	            	
-		            <plugin>
-		                <groupId>org.apache.maven.plugins</groupId>
-		                <artifactId>maven-source-plugin</artifactId>
-		                <version>2.1.2</version>
-		                <executions>
-		                    <execution>
-		                        <id>attach-sources</id>
-		                        <goals>
-		                            <goal>jar</goal>
-		                        </goals>
-		                    </execution>
-		                </executions>
-		            </plugin>
-		            <plugin>
-	                    <artifactId>maven-assembly-plugin</artifactId>
-	                    <version>2.4.1</version>
-	                    <configuration>
-	                        <appendAssemblyId>false</appendAssemblyId>
-	                        <descriptors>
-	                            <descriptor>${basedir}/assembly.xml</descriptor>
-	                        </descriptors>
-	                    </configuration>
-	                    <executions>
-	                        <execution>
-	                            <id>make-assembly</id>
-	                            <phase>package</phase>
-	                            <goals>
-	                                <goal>single</goal>
-	                            </goals>
-	                        </execution>
-	                    </executions>
-	                </plugin>
-	                <plugin>
-	                    <groupId>org.codehaus.mojo</groupId>
-	                    <artifactId>exec-maven-plugin</artifactId>
-	                    <version>1.2</version>
-	                    <executions>
-	                        <execution>
-	                            <id>Grunt Tasks</id>
-	                            <phase>compile</phase>
-	                            <configuration>
-	                                <executable>java</executable>
-	                                <arguments>
-	                                    <argument>-version</argument>                                                                        
-	                                </arguments>
-	                            </configuration>
-	                            <goals>
-	                                <goal>exec</goal>
-	                            </goals>
-	                        </execution>
-	                    </executions>
-	                </plugin>	
-	        	</plugins>  
-            </build>
-        </profile>
-        <profile>
-            <id>build-dev</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>                
-            </activation>
-            <build>
-               <plugins>	            	
-		            <plugin>
-		                <groupId>org.apache.maven.plugins</groupId>
-		                <artifactId>maven-source-plugin</artifactId>
-		                <version>2.1.2</version>
-		                <executions>
-		                    <execution>
-		                        <id>attach-sources</id>
-		                        <goals>
-		                            <goal>jar</goal>
-		                        </goals>
-		                    </execution>
-		                </executions>
-		            </plugin>
-		            <plugin>
-	                    <artifactId>maven-assembly-plugin</artifactId>
-	                    <version>2.4.1</version>
-	                    <configuration>
-	                        <appendAssemblyId>false</appendAssemblyId>
-	                        <descriptors>
-	                            <descriptor>${basedir}/assembly.xml</descriptor>
-	                        </descriptors>
-	                    </configuration>
-	                    <executions>
-	                        <execution>
-	                            <id>make-assembly</id>
-	                            <phase>package</phase>
-	                            <goals>
-	                                <goal>single</goal>
-	                            </goals>
-	                        </execution>
-	                    </executions>
-	                </plugin>
-	                <plugin>
-	                    <groupId>org.codehaus.mojo</groupId>
-	                    <artifactId>exec-maven-plugin</artifactId>
-	                    <version>1.2</version>
-	                    <executions>
-	                        <execution>
-	                            <id>Grunt Tasks</id>
-	                            <phase>compile</phase>
-	                            <configuration>
-	                                <executable>java</executable>
-	                                <arguments>
-	                                    <argument>-version</argument>                                                                        
-	                                </arguments>
-	                            </configuration>
-	                            <goals>
-	                                <goal>exec</goal>
-	                            </goals>
-	                        </execution>
-	                    </executions>
-	                </plugin>	
-	        	</plugins>  
-            </build>
-        </profile>
-    </profiles>
+
+    <build>
+            <plugins>
+            	<plugin>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <!-- NB! Set <version> to the latest released version of frontend-maven-plugin, like in README.md -->
+                <version>0.0.16</version>
+
+                <executions>
+
+                   <execution>
+                        <id>install node and npm</id>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                        <configuration>
+                            <nodeVersion>v0.10.33</nodeVersion>
+                            <npmVersion>1.4.28</npmVersion>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>npm install</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <!-- Optional configuration which provides for running any npm command -->
+                        <configuration>
+                            <arguments>install</arguments>
+                        </configuration>
+                    </execution>
+                    
+                   
+                    
+                    <!-- <execution>
+                        <id>npm install global angular-generator</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        Optional configuration which provides for running any npm command
+                        <configuration>
+                            <arguments>install -g generator-angular</arguments>
+                        </configuration>
+                    </execution> -->
+                    
+                    <!-- <execution>
+                        <id>npm install global angular-generator</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        Optional configuration which provides for running any npm command
+                        <configuration>
+                            <arguments>install -g generator-angular</arguments>
+                        </configuration>
+                    </execution> -->
+
+                    
+
+                    <execution>
+                        <id>grunt build</id>
+                        <goals>
+                            <goal>grunt</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>--force build</arguments>
+                        </configuration>
+                    </execution>
+
+                </executions>
+            </plugin>            	
+	            <plugin>
+	                <groupId>org.apache.maven.plugins</groupId>
+	                <artifactId>maven-source-plugin</artifactId>
+	                <version>2.1.2</version>
+	                <executions>
+	                    <execution>
+	                        <id>attach-sources</id>
+	                        <goals>
+	                            <goal>jar</goal>
+	                        </goals>
+	                    </execution>
+	                </executions>
+	            </plugin>
+	            <plugin>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>2.4.1</version>
+                    <configuration>
+                        <appendAssemblyId>false</appendAssemblyId>
+                        <descriptors>
+                            <descriptor>${basedir}/assembly.xml</descriptor>
+                        </descriptors>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>make-assembly</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>single</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <!-- <plugin>
+					  <groupId>org.codehaus.mojo</groupId>
+					  <artifactId>exec-maven-plugin</artifactId>
+					  <version>1.2.1</version>
+					  <executions>
+					    <execution>
+					      <phase>prepare-package</phase>
+					      <goals>
+					        <goal>grunt</goal>
+					      </goals>
+					      <configuration>
+					        <arguments>-version</arguments>
+					    </configuration>
+					    </execution>
+					  </executions>
+					</plugin> -->	
+	        </plugins>        
+    </build>
 
 </project>
