--- a/ui-main/ui-js/pom.xml
+++ b/ui-main/ui-js/pom.xml
@@ -16,100 +16,164 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>ui-main</artifactId>
-        <groupId>com.thalamas</groupId>
+        <groupId>com.swamy</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
        
     <artifactId>ui-js</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <name>JavaScript Packaging - ${project.artifactId}</name>
     <description>Build and packaging for all UI JavaScript into one file for browser loading efficiency.</description>
 
     <properties>
-        <resource-dir>${basedir}/src/main/resources</resource-dir>
+        <resource-dir>${basedir}/app</resource-dir>
         <uncompressed>uncompressed</uncompressed>
         <release-dir>${basedir}/target/release</release-dir>
     </properties>
 
     <organization>
-        <name>Thalamas</name>
+        <name>9Toppiks NewGen</name>
         <url>http://www.9toppiks.com</url>
     </organization>
 
-    <build>
-            <plugins>
-            	<plugin>
-                <groupId>com.github.eirslett</groupId>
-                <artifactId>frontend-maven-plugin</artifactId>
-                <!-- NB! Set <version> to the latest released version of frontend-maven-plugin, like in README.md -->
-                <version>0.0.16</version>
-
-                <executions>
-
-                   <execution>
-                        <id>install node and npm</id>
-                        <goals>
-                            <goal>install-node-and-npm</goal>
-                        </goals>
-                        <configuration>
-                            <nodeVersion>v0.10.33</nodeVersion>
-                            <npmVersion>1.4.28</npmVersion>
-                        </configuration>
-                    </execution>
-
-                    <execution>
-                        <id>npm install</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-                        <!-- Optional configuration which provides for running any npm command -->
-                        <configuration>
-                            <arguments>install</arguments>
-                        </configuration>
-                    </execution>
-                    
-                   
-                    
-                    <!-- <execution>
-                        <id>npm install global angular-generator</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-                        Optional configuration which provides for running any npm command
-                        <configuration>
-                            <arguments>install -g generator-angular</arguments>
-                        </configuration>
-                    </execution> -->
-                    
-                    <!-- <execution>
-                        <id>npm install global angular-generator</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-                        Optional configuration which provides for running any npm command
-                        <configuration>
-                            <arguments>install -g generator-angular</arguments>
-                        </configuration>
-                    </execution> -->
-
-                    
-
-                    <execution>
-                        <id>grunt build</id>
-                        <goals>
-                            <goal>grunt</goal>
-                        </goals>
-                        <configuration>
-                        	<!--Do not remove the force only change 2nd word "build/serve/test" as per requirement -->
-                           <!--"build": for generate files and build the zip file  -->
-                           <!--"serve": for see the app in browser  -->
-                           <!--"test": for see the app in browser  -->
-                            <arguments>--force serve</arguments>
-                        </configuration>
-                    </execution>
-
-                </executions>
-            </plugin>            	
+    <profiles>
+    	<profile>
+            <id>build-all</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>fullBuild</name>
+                </property>
+            </activation>
+            <build>
+               <plugins>	            	
+		            <plugin>
+		                <groupId>org.apache.maven.plugins</groupId>
+		                <artifactId>maven-source-plugin</artifactId>
+		                <version>2.1.2</version>
+		                <executions>
+		                    <execution>
+		                        <id>attach-sources</id>
+		                        <goals>
+		                            <goal>jar</goal>
+		                        </goals>
+		                    </execution>
+		                </executions>
+		            </plugin>
+		            <plugin>
+	                    <artifactId>maven-assembly-plugin</artifactId>
+	                    <version>2.4.1</version>
+	                    <configuration>
+	                        <appendAssemblyId>false</appendAssemblyId>
+	                        <descriptors>
+	                            <descriptor>${basedir}/assembly.xml</descriptor>
+	                        </descriptors>
+	                    </configuration>
+	                    <executions>
+	                        <execution>
+	                            <id>make-assembly</id>
+	                            <phase>package</phase>
+	                            <goals>
+	                                <goal>single</goal>
+	                            </goals>
+	                        </execution>
+	                    </executions>
+	                </plugin>
+	                <plugin>
+	                    <groupId>org.codehaus.mojo</groupId>
+	                    <artifactId>exec-maven-plugin</artifactId>
+	                    <version>1.2</version>
+	                    <executions>
+	                        <execution>
+	                            <id>Grunt Tasks</id>
+	                            <phase>compile</phase>
+	                            <configuration>
+	                                <executable>java</executable>
+	                                <arguments>
+	                                    <argument>-version</argument>                                                                        
+	                                </arguments>
+	                            </configuration>
+	                            <goals>
+	                                <goal>exec</goal>
+	                            </goals>
+	                        </execution>
+	                    </executions>
+	                </plugin>	
+	        	</plugins>  
+            </build>
+        </profile>
+        <profile>
+            <id>build-dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>                
+            </activation>
+            <build>
+	            <plugins>
+	            	<plugin>
+	                <groupId>com.github.eirslett</groupId>
+	                <artifactId>frontend-maven-plugin</artifactId>
+	                <!-- NB! Set <version> to the latest released version of frontend-maven-plugin, like in README.md -->
+	                <version>0.0.16</version>
+	                <executions>	
+	                   
+	                   <execution>
+	                        <id>install node and npm</id>
+	                        <goals>
+	                            <goal>install-node-and-npm</goal>
+	                        </goals>
+	                        <configuration>
+	                            <nodeVersion>v0.10.33</nodeVersion>
+	                            <npmVersion>1.4.28</npmVersion>
+	                        </configuration>
+	                    </execution>
+	                    
+	                    <execution>
+	                        <id>npm install</id>
+	                        <goals>
+	                            <goal>npm</goal>
+	                        </goals>
+	                        <!-- Optional configuration which provides for running any npm command -->
+	                        <configuration>
+	                            <arguments>install</arguments>
+	                        </configuration>
+	                    </execution>
+	                    
+	                    <!-- <execution>
+	                        <id>npm install global angular-generator</id>
+	                        <goals>
+	                            <goal>npm</goal>
+	                        </goals>
+	                        Optional configuration which provides for running any npm command
+	                        <configuration>
+	                            <arguments>install -g generator-angular</arguments>
+	                        </configuration>
+	                    </execution> -->
+	                    
+	                    <!-- <execution>
+	                        <id>npm install global angular-generator</id>
+	                        <goals>
+	                            <goal>npm</goal>
+	                        </goals>
+	                        Optional configuration which provides for running any npm command
+	                        <configuration>
+	                            <arguments>install -g generator-angular</arguments>
+	                        </configuration>
+	                    </execution> -->
+	
+	                    <execution>
+	                        <id>grunt build</id>
+	                        <goals>
+	                            <goal>grunt</goal>
+	                        </goals>
+	                        <configuration>
+	                        	<!--Do not remove the force only change 2nd word "build/serve/test" as per requirement -->
+	                           <!--"build": for generate files and build the zip file  -->
+	                           <!--"serve": for see the app in browser  -->
+	                           <!--"test": for see the app in browser  -->
+	                            <arguments>--force serve</arguments>
+	                        </configuration>
+	                    </execution>	
+	                </executions>
+	            </plugin>            	
 	            <plugin>
 	                <groupId>org.apache.maven.plugins</groupId>
 	                <artifactId>maven-source-plugin</artifactId>
@@ -158,7 +222,8 @@
 					    </execution>
 					  </executions>
 					</plugin> -->	
-	        </plugins>        
-    </build>
-
+		        </plugins>        
+    		</build>
+        </profile>
+    </profiles>
 </project>
